--- a/booking-microservice-prod.properties
+++ b/booking-microservice-prod.properties
@@ -1,1 +1,5 @@
 booking.propertie=Booking Profile Prod
+spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
