--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,3 +1,3 @@
 product.propertie=Product Profile Dev
 spring.data.mongodb.uri=mongodb://localhost:27017/productdb
-app.testProp=Property of test update
+app.testProp=Property of test update Message Broker
