--- a/booking-microservice-dev.properties
+++ b/booking-microservice-dev.properties
@@ -1,4 +1,4 @@
-booking.propertie=Booking Profile Dev Update
+booking.propertie=Booking Profile Dev Update Message Broker
 spring.datasource.url=jdbc:mysql://localhost:3306/bookingdb
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
